#############################################################################
BETA PUBLIC RELEASE VERSION 1.4.1       5-27-09
#############################################################################
 - NEW FEATURES
  * Disabled Typemap output by default, added --typemap flag to create typemap
    output if needed.
  * Enabled "Create APBS Input File" by default on the web server, so that 
    APBS calculation and visualization are more obvious to the users.
  * Added warnings to stderr and the REMARK field in the output PQR file 
    regarding multiple occupancy entries in PDB file.
  * Added more informative messages in REMARK field, explaining why PDB2PQR
    was unable to assign charges to certain atoms.
  * Updated structures.py, now PDB2PQR keeps the insertion codes from PDB 
    files.
  * Added "make test-long", which runs PDB2PQR on a long list (249) of PDBs
    by default, it is also possible to let it run on specified number of 
    PDBs, e.g.,  export TESTNUM=50; make test-long . 
  * Updated NBCR opal service urls from http://ws.nbcr.net/opal/... to 
    http://ws.nbcr.net/opal2/...

 - BUG FIXES
  * Added -fno-stack-protector to CXXFLAGS in configure. This fixes the stack
    smashing problem in simple test on Ubuntu Linux with recent gcc versions.
  * Verbosity outputs should be stdouts, not stderrs in web server interface. 
    Corrected this in src/routines.py.
  * Fixed a bug in psize.py: for a pqr file with no ATOM entries but only 
    HETATM entries in it, inputgen.py should still create an APBS input file
    with reasonable grid lengths. 
  * Added special handling for special mol2 formats (unwanted white spaces
    or blank lines in ATOM or BOND records).
  * Added template file to doc directory, which fixed a broken link in 
    programmer guide.

#############################################################################
BETA PUBLIC RELEASE VERSION 1.4.0       3-31-09